# FocusLens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  suggestion.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: MVP-Backlog.md  MVP-Implementation-Status.md  MVP-Task-List.csv  PRD-MVP.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  mod.rs  project.rs  recording.rs  settings.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/capture/: metrics.rs  service.rs
src-tauri/src/core/export/: mod.rs  quality.rs  service.rs
src-tauri/src/core/motion/: mod.rs  smoothing.rs  tracker.rs
src-tauri/src/core/recovery/: service.rs
src-tauri/src/core/timeline/: service.rs
src-tauri/src/domain/: mod.rs  models.rs  state_machine.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/ffmpeg/: capabilities.rs  command.rs  export.rs  mod.rs  probe.rs  recording.rs
src-tauri/src/infra/logging/: mod.rs
src-tauri/src/infra/storage/: project_store.rs
src/components/: CameraMotionPanel.tsx  ExportProgressCard.tsx  ProjectCard.tsx  RecordingControlBar.tsx  TimelineEditor.tsx
src/hooks/: useTauriEvents.ts
src/pages/: DashboardPage.tsx  StudioPage.tsx
src/stores/: exportStore.ts  projectStore.ts  recordingStore.ts  settingsStore.ts
src/types/: project.ts
src/utils/: format.ts  tauriError.ts
tests/: MVP-Acceptance-Checklist.md  Week2-Week5-Regression.md
(+5 files in other folders)
