[package]
name = "focuslens"
version = "0.1.0"
description = "FocusLens MVP desktop recorder"
authors = ["FocusLens Team"]
edition = "2021"

[lib]
name = "focuslens_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "focuslens"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.0.0", features = [] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3.14.0"
